fix: markdown code always show scrollbar

--- a/web/app/styles/markdown.scss
+++ b/web/app/styles/markdown.scss
@@ -779,7 +779,7 @@
   max-width: 100%;
   padding: 0;
   margin: 0;
-  overflow-x: scroll;
+  overflow-x: auto;
   line-height: inherit;
   word-wrap: normal;
   background-color: transparent;
